cleanup Http.Request and Http.Cookie code